fix all footer of all page + fix paths redrirection

--- a/html/histoire.html
+++ b/html/histoire.html
@@ -39,7 +39,7 @@
 
       <!--logo-->
       <div class="logo-container-header">
-        <a href="/.">
+        <a href="../index.html">
           <img src="../img/logo-as.svg" class="logo" alt="logo" />
         </a>
       </div>
@@ -89,91 +89,94 @@
       </nav>
     </header>
 
-    <h1 class="titre">L' histoire<span> du club</span></h1>
+    <main id="main">
+      <h1 class="titre">L' histoire<span> du club</span></h1>
 
-    <section id="allstory">
-      <!-- ---------------------------------- -->
+      <section id="allstory">
+        <!-- ---------------------------------- -->
 
-      <div class="story">
-        <img class="story-photo" src="../img/old1.jpg" />
+        <div class="story">
+          <img class="story-photo" src="../img/old1.jpg" />
 
-        <div class="text-box">
-          <p class="inter-light">
-            En avril 2016, l'AS Montigny a créé sa première équipe, marquant ainsi le début de son parcours sportif. Cette
-            équipe pionnière a été formée avec passion et détermination par les fondateurs du club, qui étaient animés par
-            une volonté commune de promouvoir le football local. Composée de joueurs talentueux et ambitieux, l'équipe a
-            rapidement suscité l'enthousiasme de la communauté sportive de Montigny et des environs. Leur premier match a été
-            un moment mémorable, symbolisant le début d'une nouvelle ère pour le club. Depuis lors, l'AS Montigny a continué
-            à se développer et à évoluer, en inscrivant son nom dans les annales du football local.
-          </p>
-        </div>
-      </div>
-
-      <!-- ------------------------------------ -->
-
-      <div class="story">
-        <div class="text-box">
-          <p class="inter-light">
-            Le club des Montagnards a connu un nouveau chapitre passionnant lorsque Michael Dupont a pris les rênes en tant
-            que président. Son leadership visionnaire et son engagement envers le développement du football local ont apporté
-            une nouvelle énergie et une nouvelle direction au club. Sous sa direction, le club a connu une croissance
-            significative et a renforcé sa présence dans la communauté de Montigny et au-delà. Michael Dupont a été un pilier
-            central de l'équipe, guidant le club avec dévouement et passion. Sa détermination à faire progresser le club des
-            Montagnards a permis de réaliser de grandes avancées, à la fois sur et en dehors du terrain.
-          </p>
+          <div class="text-box">
+            <p class="inter-light">
+              En avril 2016, l'AS Montigny a créé sa première équipe, marquant ainsi le début de son parcours sportif. Cette
+              équipe pionnière a été formée avec passion et détermination par les fondateurs du club, qui étaient animés par
+              une volonté commune de promouvoir le football local. Composée de joueurs talentueux et ambitieux, l'équipe a
+              rapidement suscité l'enthousiasme de la communauté sportive de Montigny et des environs. Leur premier match a
+              été un moment mémorable, symbolisant le début d'une nouvelle ère pour le club. Depuis lors, l'AS Montigny a
+              continué à se développer et à évoluer, en inscrivant son nom dans les annales du football local.
+            </p>
+          </div>
         </div>
 
-        <img class="story-photo" src="../img/president4.jpg" />
-      </div>
+        <!-- ------------------------------------ -->
 
-      <!-- --------------------------------- -->
+        <div class="story">
+          <div class="text-box">
+            <p class="inter-light">
+              Le club des Montagnards a connu un nouveau chapitre passionnant lorsque Michael Dupont a pris les rênes en tant
+              que président. Son leadership visionnaire et son engagement envers le développement du football local ont
+              apporté une nouvelle énergie et une nouvelle direction au club. Sous sa direction, le club a connu une
+              croissance significative et a renforcé sa présence dans la communauté de Montigny et au-delà. Michael Dupont a
+              été un pilier central de l'équipe, guidant le club avec dévouement et passion. Sa détermination à faire
+              progresser le club des Montagnards a permis de réaliser de grandes avancées, à la fois sur et en dehors du
+              terrain.
+            </p>
+          </div>
 
-      <div class="story">
-        <img class="story-photo" src="../img/mascotte3.png" />
-
-        <div class="text-box">
-          <p class="inter-light">
-            L'emblème du club de l'AS Montigny, représenté par un griffon majestueux, incarne la fierté et la détermination
-            de l'équipe. Symbole de force et de courage, le griffon est un rappel constant de l'esprit combatif des joueurs
-            qui défendent les couleurs de Montigny. Avec ses ailes déployées et sa posture imposante, le griffon inspire les
-            joueurs et les supporteurs, les poussant à donner le meilleur d'eux-mêmes sur le terrain. En tant que mascotte du
-            club, le griffon est le lien entre les joueurs et les valeurs du club, créant une identité unifiée et un esprit
-            d'équipe solide. Son image emblématique est instantanément reconnaissable, représentant l'engagement et
-            l'excellence de l'AS Montigny dans le monde du football.
-          </p>
+          <img class="story-photo" src="../img/president4.jpg" />
         </div>
-      </div>
 
-      <!-- ---------------------------------- -->
-      <div class="story">
-        <div class="text-box">
-          <p class="inter-light">
-            L'extrait du journal témoigne de la première sortie en match officiel de l'AS Montigny, marquant un moment
-            inoubliable dans l'histoire du club. Contre toute attente, l'équipe a réussi à remporter une victoire éclatante
-            contre la JS Marcinelle. Les joueurs de Montigny ont démontré un jeu solide et une détermination sans faille tout
-            au long de la rencontre, impressionnant les supporters venus les soutenir. Cette victoire inaugurale a été
-            célébrée avec enthousiasme par les membres de l'équipe et les fidèles supporters, créant un e ambiance de joie et
-            de fierté dans tout le club. Cet événement a marqué le début d'une série de succès pour l'AS Montigny et a jeté
-            les bases d'un avenir prometteur pour cette jeune équipe ambitieuse.
-          </p>
+        <!-- --------------------------------- -->
+
+        <div class="story">
+          <img class="story-photo" src="../img/mascotte3.png" />
+
+          <div class="text-box">
+            <p class="inter-light">
+              L'emblème du club de l'AS Montigny, représenté par un griffon majestueux, incarne la fierté et la détermination
+              de l'équipe. Symbole de force et de courage, le griffon est un rappel constant de l'esprit combatif des joueurs
+              qui défendent les couleurs de Montigny. Avec ses ailes déployées et sa posture imposante, le griffon inspire
+              les joueurs et les supporteurs, les poussant à donner le meilleur d'eux-mêmes sur le terrain. En tant que
+              mascotte du club, le griffon est le lien entre les joueurs et les valeurs du club, créant une identité unifiée
+              et un esprit d'équipe solide. Son image emblématique est instantanément reconnaissable, représentant
+              l'engagement et l'excellence de l'AS Montigny dans le monde du football.
+            </p>
+          </div>
         </div>
-        <img class="story-photo" src="../img/gazette2.jpg" />
-      </div>
 
-      <!-- ------------------------- -->
-      <div class="story">
-        <img class="story-photo" src="../img/gazette4.jpg" />
-
-        <div class="text-box">
-          <p class="inter-light">
-            L'équipe P4, pleine de détermination, témoigne de l'évolution constante de l'AS Montigny. Cette réussite sportive
-            reflète l'engagement collectif des joueurs, des entraîneurs et du staff technique. Le club est en pleine
-            expansion, développant ses infrastructures et promouvant les jeunes talents. Avec un esprit d'innovation et une
-            passion sans limites, l'AS Montigny s'établit comme une référence dans le football local et régional.
-          </p>
+        <!-- ---------------------------------- -->
+        <div class="story">
+          <div class="text-box">
+            <p class="inter-light">
+              L'extrait du journal témoigne de la première sortie en match officiel de l'AS Montigny, marquant un moment
+              inoubliable dans l'histoire du club. Contre toute attente, l'équipe a réussi à remporter une victoire éclatante
+              contre la JS Marcinelle. Les joueurs de Montigny ont démontré un jeu solide et une détermination sans faille
+              tout au long de la rencontre, impressionnant les supporters venus les soutenir. Cette victoire inaugurale a été
+              célébrée avec enthousiasme par les membres de l'équipe et les fidèles supporters, créant un e ambiance de joie
+              et de fierté dans tout le club. Cet événement a marqué le début d'une série de succès pour l'AS Montigny et a
+              jeté les bases d'un avenir prometteur pour cette jeune équipe ambitieuse.
+            </p>
+          </div>
+          <img class="story-photo" src="../img/gazette2.jpg" />
         </div>
-      </div>
-    </section>
+
+        <!-- ------------------------- -->
+        <div class="story">
+          <img class="story-photo" src="../img/gazette4.jpg" />
+
+          <div class="text-box">
+            <p class="inter-light">
+              L'équipe P4, pleine de détermination, témoigne de l'évolution constante de l'AS Montigny. Cette réussite
+              sportive reflète l'engagement collectif des joueurs, des entraîneurs et du staff technique. Le club est en
+              pleine expansion, développant ses infrastructures et promouvant les jeunes talents. Avec un esprit d'innovation
+              et une passion sans limites, l'AS Montigny s'établit comme une référence dans le football local et régional.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <!-- ---------- -->
 
@@ -181,101 +184,106 @@
     <footer>
       <div class="logocontainer-footer">
         <a href="../index.html">
-          <img src="../img/logo.png" id="logo-footer" alt="logo" />
+          <img src="../img/logo-as.svg" id="logo-footer" alt="logo" />
         </a>
       </div>
 
       <div class="footer-container">
-        <div class="footer-section">
-          <h3>
-            À Propos
-            <hr class="hr-footer-1" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Saison
+              <hr class="hr-footer" style="width: 35%" />
+            </h3>
 
-          <p>
-            L'AS Montigny est un club de football amateur fondé en 1985 et situé à Montigny-le-tilleul, à Charleroi. Notre
-            club a pour objectif de promouvoir le football amateur et de donner l'opportunité à tous les passionnés de ce
-            sport de jouer dans un environnement convivial.
-          </p>
+            <ul class="liens-footer">
+              <li><a href="calendrier.html#main">Calendrier</a></li>
+              <li><a href="cotisation.html#main">Cotisation</a></li>
+              <li><a href="planning.html#main">Planning</a></li>
+              <li><a href="planning.html#organigramme">Organigramme</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer-section-small">
-          <h3>
-            Equipes
-            <hr class="hr-footer-2" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Club
+              <hr class="hr-footer" style="width: 25%" />
+            </h3>
 
-          <ul class="liens-footer">
-            <li><a href="kids.html">kids</a></li>
-            <li><a href="jeunes.html">jeunes</a></li>
-            <li><a href="premiere.html">Premiere</a></li>
-            <li><a href="senior.html">Senior</a></li>
-          </ul>
+            <ul class="liens-footer">
+              <li><a href="histoire.html#main">Histoire</a></li>
+              <li><a href="sponsors.html#main">Sponsors</a></li>
+              <li><a href="projets.html#main">Projets</a></li>
+              <li><a href="projets.html#volontariat">Volontariat</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer-section-small">
-          <h3>
-            Club
-            <hr class="hr-footer-3" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Liens utiles
+              <hr class="hr-footer" style="width: 45%" />
+            </h3>
 
-          <ul class="liens-footer">
-            <li><a href="boutique.html">Boutique</a></li>
-            <li><a href="histoire.html">Histoire</a></li>
-            <li><a href="sponsor.html">Sponsor</a></li>
-            <li><a href="projet.html">Projet</a></li>
-          </ul>
+            <ul class="liens-footer">
+              <li><a href="boutique.html#main">Boutique</a></li>
+              <li><a href="events.html#main">Evénements</a></li>
+              <li><a href="equipes.html#main">Equipes</a></li>
+              <li><a href="contact.html#main">Contact</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer-section">
-          <h3>
-            Contact
-            <hr class="hr-footer-2" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Contact
+              <hr class="hr-footer" />
+            </h3>
 
-          <p>
-            <img src="../img/icon-localisation.png" class="icon-footer" />
-            Rue Bois Frion 109, 6110 Montigny-le-Tilleul
-          </p>
-          <p>
-            <img src="../img/icon-tel.png" class="icon-footer" alt="" />
-            0495/282992
-          </p>
-          <p>
-            <img src="../img/icon-mail.png" class="icon-footer" alt="" />
-            michael.dupont@outlook.com
-          </p>
-          <p>
-            <img src="../img/icon-horraire.png" alt="" class="icon-footer" />
-            9H / 19H
-          </p>
+            <p style="max-width: 20vh">
+              <img src="../img/icon-localisation.png" class="icon-footer" />
+              Rue Bois Frion 109, 6110 Montigny-le-Tilleul
+            </p>
+            <p>
+              <img src="../img/icon-tel.png" class="icon-footer" alt="" />
+              0495/282992
+            </p>
+
+            <p>
+              <img src="../img/icon-horraire.png" alt="" class="icon-footer" />
+              9H / 19H
+            </p>
+          </div>
         </div>
       </div>
 
       <!-- Social icon -->
 
-      <div class="social-icon-container">
-        <a href="https://www.instagram.com/as_montigny/?hl=fr" class="social-icon">
-          <img src="../img/logo-instagram.png" class="icon-taille" alt="" />
-        </a>
-
-        <a href="https://www.facebook.com/footmontigny" class="social-icon">
-          <img src="../img/logo-facebook.png" class="icon-taille" alt="" />
-        </a>
-
-        <a href="https://goo.gl/maps/GkPM55x6QD1F4kCQ7" class="social-icon">
-          <img src="../img/logo-google.png" class="icon-taille" alt="" />
-        </a>
-
-        <a href="https://youtube.com/@asmontigny2175" class="social-icon">
-          <img src="../img/logo-youtube.png" class="icon-taille" alt="" />
-        </a>
-      </div>
-
       <!--bottom footer -->
-
       <div class="bottom-footer">
-        <p class="copyright">Copyright &copy; 2023 Lucas Paludetto</p>
+        <div class="social-icon-container">
+          <a href="https://www.instagram.com/as_montigny/?hl=fr" class="social-icon">
+            <img src="../img/logo-instagram.png" class="icon-taille" alt="" />
+          </a>
+
+          <a href="https://www.facebook.com/footmontigny" class="social-icon">
+            <img src="../img/logo-facebook.png" class="icon-taille" alt="" />
+          </a>
+
+          <a href="https://goo.gl/maps/GkPM55x6QD1F4kCQ7" class="social-icon">
+            <img src="../img/logo-google.png" class="icon-taille" alt="" />
+          </a>
+
+          <a href="https://youtube.com/@asmontigny2175" class="social-icon">
+            <img src="../img/logo-youtube.png" class="icon-taille" alt="" />
+          </a>
+        </div>
+
+        <p class="copyright">&copy; Made by Lucas Paludetto</p>
       </div>
     </footer>
   </body>
