--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <!--logo-->
       <div class="logo-container-header">
-        <a href="/.">
+        <a href="index.html">
           <img src="img/logo-as.svg" class="logo" alt="logo" />
         </a>
       </div>
@@ -90,7 +90,7 @@
     </header>
 
     <!--MAIN-->
-    <main>
+    <main id="main">
       <!-- banniere -->
       <figure id="banniere-container">
         <img src="img/banner_new.png" alt="banniere" class="banner" />
@@ -333,9 +333,9 @@
             </h3>
 
             <ul class="liens-footer">
-              <li><a href="html/calendrier.html">Calendrier</a></li>
-              <li><a href="html/cotisation.html">Cotisation</a></li>
-              <li><a href="html/planning.html">Planning</a></li>
+              <li><a href="html/calendrier.html#main">Calendrier</a></li>
+              <li><a href="html/cotisation.html#main">Cotisation</a></li>
+              <li><a href="html/planning.html#main">Planning</a></li>
               <li><a href="html/planning.html#organigramme">Organigramme</a></li>
             </ul>
           </div>
@@ -349,9 +349,9 @@
             </h3>
 
             <ul class="liens-footer">
-              <li><a href="html/histoire.html">Histoire</a></li>
-              <li><a href="html/sponsors.html">Sponsors</a></li>
-              <li><a href="html/projets.html">Projets</a></li>
+              <li><a href="html/histoire.html#main">Histoire</a></li>
+              <li><a href="html/sponsors.html#main">Sponsors</a></li>
+              <li><a href="html/projets.html#main">Projets</a></li>
               <li><a href="html/projets.html#volontariat">Volontariat</a></li>
             </ul>
           </div>
@@ -365,10 +365,10 @@
             </h3>
 
             <ul class="liens-footer">
-              <li><a href="html/boutique.html">Boutique</a></li>
-              <li><a href="html/events.html">Evénements</a></li>
-              <li><a href="html/equipes.html">Equipes</a></li>
-              <li><a href="html/contact.html">Contact</a></li>
+              <li><a href="html/boutique.html#main">Boutique</a></li>
+              <li><a href="html/events.html#main">Evénements</a></li>
+              <li><a href="html/equipes.html#main">Equipes</a></li>
+              <li><a href="html/contact.html#main">Contact</a></li>
             </ul>
           </div>
         </div>
