--- a/html/equipes.html
+++ b/html/equipes.html
@@ -39,7 +39,7 @@
 
       <!--logo-->
       <div class="logo-container-header">
-        <a href="/.">
+        <a href="../index.html">
           <img src="../img/logo-as.svg" class="logo" alt="logo" />
         </a>
       </div>
@@ -88,7 +88,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main id="main">
       <article>
         <img src="../img/visual3v2.png" alt="Background" class="background-image" />
         <h1 class="titre">Présentation des effectifs de l'AS Montigny pour <span>2023-24</span></h1>
@@ -162,101 +162,106 @@
     <footer>
       <div class="logocontainer-footer">
         <a href="../index.html">
-          <img src="../img/logo.png" id="logo-footer" alt="logo" />
+          <img src="../img/logo-as.svg" id="logo-footer" alt="logo" />
         </a>
       </div>
 
       <div class="footer-container">
-        <div class="footer-section">
-          <h3>
-            À Propos
-            <hr class="hr-footer-1" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Saison
+              <hr class="hr-footer" style="width: 35%" />
+            </h3>
 
-          <p>
-            L'AS Montigny est un club de football amateur fondé en 1985 et situé à Montigny-le-tilleul, à Charleroi. Notre
-            club a pour objectif de promouvoir le football amateur et de donner l'opportunité à tous les passionnés de ce
-            sport de jouer dans un environnement convivial.
-          </p>
+            <ul class="liens-footer">
+              <li><a href="calendrier.html#main">Calendrier</a></li>
+              <li><a href="cotisation.html#main">Cotisation</a></li>
+              <li><a href="planning.html#main">Planning</a></li>
+              <li><a href="planning.html#organigramme">Organigramme</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer-section-small">
-          <h3>
-            Equipes
-            <hr class="hr-footer-2" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Club
+              <hr class="hr-footer" style="width: 25%" />
+            </h3>
 
-          <ul class="liens-footer">
-            <li><a href="kids.html">kids</a></li>
-            <li><a href="jeunes.html">jeunes</a></li>
-            <li><a href="premiere.html">Premiere</a></li>
-            <li><a href="senior.html">Senior</a></li>
-          </ul>
+            <ul class="liens-footer">
+              <li><a href="histoire.html#main">Histoire</a></li>
+              <li><a href="sponsors.html#main">Sponsors</a></li>
+              <li><a href="projets.html#main">Projets</a></li>
+              <li><a href="projets.html#volontariat">Volontariat</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer-section-small">
-          <h3>
-            Club
-            <hr class="hr-footer-3" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Liens utiles
+              <hr class="hr-footer" style="width: 45%" />
+            </h3>
 
-          <ul class="liens-footer">
-            <li><a href="boutique.html">Boutique</a></li>
-            <li><a href="histoire.html">Histoire</a></li>
-            <li><a href="sponsor.html">Sponsor</a></li>
-            <li><a href="projet.html">Projet</a></li>
-          </ul>
+            <ul class="liens-footer">
+              <li><a href="boutique.html#main">Boutique</a></li>
+              <li><a href="events.html#main">Evénements</a></li>
+              <li><a href="equipes.html#main">Equipes</a></li>
+              <li><a href="contact.html#main">Contact</a></li>
+            </ul>
+          </div>
         </div>
 
-        <div class="footer-section">
-          <h3>
-            Contact
-            <hr class="hr-footer-2" />
-          </h3>
+        <div class="footer-section-wrapper">
+          <div class="footer-section">
+            <h3>
+              Contact
+              <hr class="hr-footer" />
+            </h3>
 
-          <p>
-            <img src="../img/icon-localisation.png" class="icon-footer" />
-            Rue Bois Frion 109, 6110 Montigny-le-Tilleul
-          </p>
-          <p>
-            <img src="../img/icon-tel.png" class="icon-footer" alt="" />
-            0495/282992
-          </p>
-          <p>
-            <img src="../img/icon-mail.png" class="icon-footer" alt="" />
-            michael.dupont@outlook.com
-          </p>
-          <p>
-            <img src="../img/icon-horraire.png" alt="" class="icon-footer" />
-            9H / 19H
-          </p>
+            <p style="max-width: 20vh">
+              <img src="../img/icon-localisation.png" class="icon-footer" />
+              Rue Bois Frion 109, 6110 Montigny-le-Tilleul
+            </p>
+            <p>
+              <img src="../img/icon-tel.png" class="icon-footer" alt="" />
+              0495/282992
+            </p>
+
+            <p>
+              <img src="../img/icon-horraire.png" alt="" class="icon-footer" />
+              9H / 19H
+            </p>
+          </div>
         </div>
       </div>
 
       <!-- Social icon -->
 
-      <div class="social-icon-container">
-        <a href="https://www.instagram.com/as_montigny/?hl=fr" class="social-icon">
-          <img src="../img/logo-instagram.png" class="icon-taille" alt="" />
-        </a>
-
-        <a href="https://www.facebook.com/footmontigny" class="social-icon">
-          <img src="../img/logo-facebook.png" class="icon-taille" alt="" />
-        </a>
-
-        <a href="https://goo.gl/maps/GkPM55x6QD1F4kCQ7" class="social-icon">
-          <img src="../img/logo-google.png" class="icon-taille" alt="" />
-        </a>
-
-        <a href="https://youtube.com/@asmontigny2175" class="social-icon">
-          <img src="../img/logo-youtube.png" class="icon-taille" alt="" />
-        </a>
-      </div>
-
       <!--bottom footer -->
-
       <div class="bottom-footer">
-        <p class="copyright">Copyright &copy; 2023 Lucas Paludetto</p>
+        <div class="social-icon-container">
+          <a href="https://www.instagram.com/as_montigny/?hl=fr" class="social-icon">
+            <img src="../img/logo-instagram.png" class="icon-taille" alt="" />
+          </a>
+
+          <a href="https://www.facebook.com/footmontigny" class="social-icon">
+            <img src="../img/logo-facebook.png" class="icon-taille" alt="" />
+          </a>
+
+          <a href="https://goo.gl/maps/GkPM55x6QD1F4kCQ7" class="social-icon">
+            <img src="../img/logo-google.png" class="icon-taille" alt="" />
+          </a>
+
+          <a href="https://youtube.com/@asmontigny2175" class="social-icon">
+            <img src="../img/logo-youtube.png" class="icon-taille" alt="" />
+          </a>
+        </div>
+
+        <p class="copyright">&copy; Made by Lucas Paludetto</p>
       </div>
     </footer>
   </body>
