--- a/html/boutique.html
+++ b/html/boutique.html
@@ -5,19 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>AS Montigny - Site officiel</title>
+    <title>AS Montigny - Boutique</title>
     <link rel="icon" type="image/png" href="../img/logo-as.png" />
 
     <!--javascript-->
     <script defer src="../javascript/boutique.js"></script>
-    <script defer src="../javascript/notifications.js"></script>
 
     <!--css-->
     <link rel="stylesheet" href="../css/p-boutique.css" />
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/components.css" />
     <link rel="stylesheet" href="../css/layout.css" />
-    <link rel="stylesheet" href="../css/responsive.css" />
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
