--- a/html/events.html
+++ b/html/events.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>AS Montigny - Site officiel</title>
+    <title>AS Montigny - Evenements</title>
     <link rel="icon" type="image/png" href="../img/logo-as.png" />
 
     <!--javascript-->
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/components.css" />
     <link rel="stylesheet" href="../css/layout.css" />
-    <link rel="stylesheet" href="../css/responsive.css" />
     <!--fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
